--- a/src/components/Carousel/carouselStyle.module.scss
+++ b/src/components/Carousel/carouselStyle.module.scss
@@ -40,7 +40,7 @@
       aspect-ratio: auto;
       // border: 1px solid black;
       padding: 1.25vw;
-      background-color: var(--cta-bg);
+      background-color: #d3d3d3;
       border-radius: 5px;
    }
 }
