--- a/src/components/Menu Mobile/menuMobileStyle.module.scss
+++ b/src/components/Menu Mobile/menuMobileStyle.module.scss
@@ -82,7 +82,7 @@
 .linkSocial {
 	height: 40px;
 	width: 40px;
-	background-color: var(--cta-bg);
+	background-color: var(--bg);
 	border: 2px solid var(--cta-bg);
 	padding: 5px;
 	border-radius: 50%;
