--- a/src/components/Project Card/projectCard.module.scss
+++ b/src/components/Project Card/projectCard.module.scss
@@ -14,8 +14,8 @@
 
 		padding: 20px;
 		border-radius: 10px;
-		border: 1px solid var(--txt);
-		box-shadow: 5px 5px 0px 5px var(--txt);
+		// border: 1px solid var(--txt);
+		// box-shadow: 5px 5px 0px 5px var(--txt);
 
 		flex-direction: column-reverse !important; // !important to override reverse card style
 	}
