--- a/src/components/Contact Form/contactFormStyle.module.scss
+++ b/src/components/Contact Form/contactFormStyle.module.scss
@@ -19,6 +19,10 @@
    @media (max-width: 425px) {
       padding: 20px;
    }
+
+   display: grid;
+   grid-template-columns: auto auto;
+   grid-template-rows: auto auto auto;
 }
 
 .submit {
@@ -40,4 +44,12 @@
       padding-block: 10px;
       padding-inline: 15px;
    }
+
+   grid-column: 1/3;
+   grid-row: 3/4;
+}
+
+.message {
+   grid-column: 1/3;
+   grid-row: 2/3;
 }
