--- a/src/sections/Contact/contactSectionStyle.module.scss
+++ b/src/sections/Contact/contactSectionStyle.module.scss
@@ -75,7 +75,7 @@
 		line-height: normal;
 
 		@media (max-width: 425px) {
-			font-size: 30px;
+			font-size: 40px;
 			// margin-inline: 20px;
 		}
 
@@ -89,10 +89,11 @@
 	text-align: center;
 	max-width: 500px;
 	margin-inline: auto;
+	margin-bottom: 50px;
 	font-size: 16px;
 
 	@media (max-width: 425px) {
-		font-size: 12px;
+		font-size: 14px;
 	}
 
 	@media (min-width: 426px) and (max-width: 768px) {
