--- a/src/components/Carousel/carouselStyle.module.scss
+++ b/src/components/Carousel/carouselStyle.module.scss
@@ -29,7 +29,8 @@
 
 .carousel_img {
    padding: 1.25vw;
-   width: 25%;
+   width: 23%;
+   display: flex;
    // height: 200px;
 
    // width: 330px;
@@ -39,7 +40,7 @@
       width: 100%;
       aspect-ratio: auto;
       // border: 1px solid black;
-      padding: 1.25vw;
+      // padding: 1.25vw;
       background-color: #d3d3d3;
       border-radius: 5px;
    }
