--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,7 +1,6 @@
 @mixin section {
-	height: 100vh;
-	height: 100svh; /* eliminates ui elements on mobile */
-	min-height: 100vh;
+	/* eliminates ui elements on mobile */
+	height: 100svh;
 	min-height: 100svh;
 	width: 100vw;
 	position: relative;
@@ -13,10 +12,12 @@
 		padding-inline: 15px;
 		padding-block: 40px;
 	}
+
 	@media (min-width: 426px) and (max-width: 768px) {
 		padding-inline: 30px;
 		padding-block: 20px;
 	}
+
 	@media (min-width: 769px) and (max-width: 1024px) {
 		padding: 75px;
 	}
@@ -50,18 +51,19 @@
 		transform-origin: bottom right;
 		transition: transform 0.25s ease-out;
 	}
+
 	&:hover::after {
 		transform: scaleX(1);
 		transform-origin: bottom left;
 	}
 }
 
-@mixin lineTitle($height: 2px, $width: 100%) {
+@mixin line($height: 2px, $width: 100%) {
 	height: $height;
 	width: $width;
 	margin-inline: 30px;
 	background-image: linear-gradient(var(--bg) 50%, var(--bg-secondary) 50%);
-	// background-color: var(--txt);
+	// background-color: var(--cta-bg);
 
 	@media (max-width: 425px) {
 		margin-inline: 10px;
@@ -89,8 +91,29 @@
 	// }
 	@media (min-width: 769px) {
 		transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+
 		&:hover {
 			transform: scale(1.05);
 		}
+	}
+}
+
+@mixin cta {
+	display: block;
+	margin-top: 50px;
+	padding: 10px 25px;
+	border: 1px solid var(--txt);
+	border-radius: 15px;
+	font-size: 12px;
+	text-transform: uppercase;
+
+	&:hover {
+		border-color: var(--bg);
+		background-color: var(--cta-bg);
+		color: var(--txt-secondary);
+	}
+
+	@media (max-width: 425px) {
+		margin-top: 30px;
 	}
 }
