--- a/src/components/Sections/Hero/heroSectionStyle.module.scss
+++ b/src/components/Sections/Hero/heroSectionStyle.module.scss
@@ -1,24 +1,38 @@
 @import "src/sass/mixins";
 
 .section {
-	@include section;
+	// @include section;
+	height: 100svh;
+	min-height: 100svh; // 101
+	width: 100vw;
 }
 
 .container {
-	@include container;
+	// @include container;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
-	padding: 0;
-
-	@media (max-width: 768px) {
-		padding: 25px;
-		text-align: center;
-		justify-content: center;
-	}
 }
 
 .hero {
 	text-align: center;
 	margin-bottom: 100px;
+
+	h2 {
+		@media (min-width: 769px) and (max-width: 1024px) {
+			font-size: 35px;
+		}
+
+		@media (min-width: 1025px) and (max-width: 1440px) {
+			font-size: 25px;
+		}
+
+		@media (min-width: 1441px) {
+			font-size: 40px;
+		}
+	}
 
 	@media (max-width:425px) {
 		h1 {
