--- a/src/components/Socials/socialStyle.module.scss
+++ b/src/components/Socials/socialStyle.module.scss
@@ -42,7 +42,7 @@
 }
 
 .line {
-	@include lineTitle(100px, 2px);
+	@include line(100px, 2px);
 	background-image: linear-gradient(to right, var(--bg) 50%, var(--bg-secondary) 50%);
 	background-image: none;
 	width: 1px;
