--- a/src/pages/Projects/projectsPageStyle.module.scss
+++ b/src/pages/Projects/projectsPageStyle.module.scss
@@ -101,7 +101,7 @@
 }
 
 .line {
-	@include lineTitle;
+	@include line;
 	background-color: var(--bg);
 	width: auto;
 	max-width: 100%;
@@ -121,109 +121,119 @@
 	margin-top: 50px;
 }
 
-.container {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	flex-direction: column-reverse;
-	gap: 20px;
+// .container {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: space-between;
+// 	flex-direction: column-reverse;
+// 	gap: 20px;
 
-	width: 100%;
-	max-width: 320px;
+// 	// width: 100%;
+// 	// max-width: 320px;
+// 	max-width: 40%;
 
-	padding: 20px;
-	border-radius: 10px;
-	border: 2px solid var(--cta-bg);
-	color: var(--txt);
-	background-color: var(--bg);
-	// box-shadow: 5px 5px 0px 5px var(--cta-bg);
+// 	padding: 10px;
+// 	border-radius: 10px;
+// 	// border: 2px solid var(--cta-bg);
+// 	color: var(--txt);
+// 	background-color: var(--bg);
 
-	@media (min-width: 769px) and (max-width: 1024px) {
-		max-width: 260px;
-	}
 
-	// @media (max-width: 1024px) {
-	// 	max-width: 300px;
-	// }
-}
+// 	@media (max-width: 650px) {
+// 		max-width: 80%;
+// 	}
 
-.txt_w {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 10px;
+// 	@media (min-width: 769px) and (max-width: 1024px) {
+// 		max-width: 260px;
+// 	}
 
-	h3 {
-		font-size: 18px;
-	}
+// 	// @media (max-width: 1024px) {
+// 	// 	max-width: 300px;
+// 	// }
+// }
 
-	p {
-		font-size: 12px;
-	}
+// .txt_w {
+// 	display: flex;
+// 	flex-direction: column;
+// 	align-items: center;
+// 	gap: 10px;
 
-	h3::after {
-		content: "";
-		display: inline-block;
-		margin-left: 5px;
-		background-image: url("../assets/social\ media\ icon/8666682_external_link_icon.svg");
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: contain;
-		height: 20px;
-		width: 20px;
-	}
+// 	h3 {
+// 		font-size: 25px;
+// 	}
 
-	>.line {
-		@include lineTitle;
-		background-color: var(--txt);
-		display: block;
-		opacity: 100%;
-		margin: 0;
-	}
-}
+// 	p {
+// 		font-size: 12px;
+// 	}
 
-.framework_list {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	column-gap: 5px;
-	row-gap: 10px;
-}
+// 	h3::after {
+// 		content: "";
+// 		display: inline-block;
+// 		margin-left: 5px;
+// 		background-image: url("/src/assets/social media icon/8666682_external_link_icon.svg");
+// 		background-repeat: no-repeat;
+// 		background-position: center;
+// 		background-size: contain;
+// 		height: 20px;
+// 		width: 20px;
+// 	}
 
-.framework {
-	// tutto uguale tranne font size
-	padding: 2.5px;
-	border-radius: 5px;
-	font-size: 8px;
-	text-transform: uppercase;
-	color: var(--cta-txt);
-	background-color: var(--cta-bg);
+// 	>.line {
+// 		@include line;
+// 		background-color: var(--txt);
+// 		display: block;
+// 		opacity: 100%;
+// 		margin: 0;
+// 	}
+// }
 
-	@media (max-width: 425px) {
-		font-size: 10px;
-	}
-}
+// .framework_list {
+// 	display: flex;
+// 	justify-content: center;
+// 	flex-wrap: wrap;
+// 	column-gap: 10px;
+// 	row-gap: 10px;
+// }
 
-.image_w {
-	text-align: center;
-	flex: 0.9;
+// .framework {
+// 	// tutto uguale tranne font size
+// 	padding: 3.5px;
+// 	border-radius: 5px;
+// 	font-size: 10px;
+// 	text-transform: uppercase;
+// 	// option 1
+// 	color: var(--cta-txt);
+// 	background-color: var(--cta-bg);
+// 	// option 2
+// 	color: black;
+// 	background-color: transparent;
+// 	border: 1px solid black;
 
-	@media (min-width: 769px) and (max-width: 1024px) {
-		flex: 0.7;
-	}
-}
+// 	@media (max-width: 425px) {
+// 		font-size: 10px;
+// 	}
+// }
 
-.image {
-	@include image(5px);
+// .image_w {
+// 	text-align: center;
+// 	flex: 0.9;
 
-	height: auto;
-	width: 100%;
-	box-shadow: none !important;
-}
+// 	@media (min-width: 769px) and (max-width: 1024px) {
+// 		flex: 0.7;
+// 	}
+// }
 
-.textContainer,
-.image {
-	@media (max-width: 425px) {
-		flex: auto;
-	}
-}
+// .image {
+// 	@include image(5px);
+
+// 	height: auto;
+// 	width: 100%;
+// 	box-shadow: none !important;
+// }
+
+// .textContainer,
+// .image {
+// 	@media (max-width: 425px) {
+// 		flex: auto;
+// 	}
+// }
