--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -122,23 +122,6 @@ textarea {
 	overflow: hidden;
 }
 
-// moved here from menuStyle
-.cta {
-	background-color: var(--cta-bg);
-	color: var(--cta-txt);
-	text-transform: uppercase;
-	border: 1px solid transparent;
-	padding: 12px;
-	font-size: 16px;
-	border-radius: 10px;
-	transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-
-	&:hover {
-		color: var(--cta-txt-hover);
-		background-color: var(--cta-bg-hover);
-	}
-}
-
 h1 {
 	@media (max-width: 425px) {
 		font-size: 40px;
@@ -154,24 +137,6 @@ h1 {
 
 	@media (min-width: 1441px) {
 		font-size: 80px;
-	}
-}
-
-h2 {
-	@media (max-width: 425px) {
-		font-size: 30px;
-	}
-
-	@media (min-width: 769px) and (max-width: 1024px) {
-		font-size: 35px;
-	}
-
-	@media (min-width: 1025px) and (max-width: 1440px) {
-		font-size: 25px;
-	}
-
-	@media (min-width: 1441px) {
-		font-size: 40px;
 	}
 }
 
@@ -223,5 +188,24 @@ p {
 
 	@media (max-width:425px) {
 		font-size: 12px;
+	}
+}
+
+
+// style of resume cta in nav
+.cta {
+	background-color: var(--cta-bg);
+	color: var(--txt-secondary);
+	border: 1px solid var(--bg);
+	border-radius: 10px;
+	font-size: 16px;
+	padding: 10px 20px;
+
+	&:hover {
+		background-color: var(--cta-bg-hover);
+		background-color: var(--bg-secondary);
+		cursor: pointer;
+		color: var(--cta-bg);
+		border: 1px solid var(--cta-bg);
 	}
 }
