--- a/src/components/Project Page Card/projectPageCardStyle.module.scss
+++ b/src/components/Project Page Card/projectPageCardStyle.module.scss
@@ -46,6 +46,15 @@
    font-size: 20px;
    color: var(--txt);
 
+   &:hover {
+      color: var(--cta-bg) !important;
+
+      a {
+
+         color: var(--cta-bg) !important;
+      }
+   }
+
 
    &::after {
       content: "";
@@ -90,8 +99,8 @@
 }
 
 .image_w {
-      border-radius: 5px;
-         border: 1px solid var(--txt);
+   border-radius: 5px;
+   border: 1px solid var(--txt);
    text-align: center;
    flex: 0.9;
    overflow: hidden;
