--- a/src/pages/404/404Style.module.scss
+++ b/src/pages/404/404Style.module.scss
@@ -132,7 +132,7 @@
 	inset: 0;
 	height: 100%;
 	width: 100%;
-	background-image: url("../assets/4829869_arrow_next_right_icon\ 1.svg");
+	background-image: url("/src/assets/arrow-right.svg");
 	background-position: center;
 	background-size: 60%;
 	background-repeat: no-repeat;
