--- a/src/components/Layout/Menu Mobile/menuMobileStyle.module.scss
+++ b/src/components/Layout/Menu Mobile/menuMobileStyle.module.scss
@@ -1,78 +1,103 @@
 @import "src/sass/mixins";
 
-.menu,
-.navMenu {
-	display: flex;
-	align-items: center;
-}
-
 .menu {
+	@include section;
 	position: fixed;
-	top: 1.75%;
-	left: 50px;
-	right: 50px;
-	z-index: +10;
+	inset: 0;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
+	margin-left: 100%;
+	padding-top: 150px !important;
+
+	background-color: var(--bg-secondary);
+	color: var(--txt-secondary);
+	overflow: hidden;
+	z-index: 10;
+
 	transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 
 	@media (max-width: 425px) {
-		right: 15px;
-		left: 15px;
+		padding-inline: 30px;
+		padding-top: 100px !important;
+		padding-bottom: 20px;
 	}
 
-	@media (max-width: 1024px) {
-		right: 25px;
-		left: 25px;
+	@media (min-width: 426px) {
+		display: none;
 	}
 }
 
-.navMenu {
-	@include card;
+.title {
+	@include titleSection(15px);
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 15px;
+	font-weight: lighter;
 
-	gap: 30px;
-	padding: 10px;
-	border-radius: 10px;
-	border: 1px solid var(--cta-bg);
-	border: 1px solid var(--txt);
+	&:nth-of-type(2) {
+		flex-direction: column-reverse;
+	}
+
+	h6 {
+		font-size: 10px;
+		font-weight: normal;
+	}
+
+	.line {
+		@include line;
+		margin: 0 !important;
+		background-color: var(--bg);
+	}
+}
+
+// .navSocialMobile {
+// 	.title {
+// 		flex-direction: column-reverse;
+// 	}
+// }
+
+.navMobile ul {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	row-gap: 20px;
+	padding: 0;
+}
+
+.linkMobile {
+	text-transform: uppercase;
+	font-size: 40px;
+	// color: var(--txt);
+}
+
+.iconsWrapper {
+	display: flex;
+	justify-content: flex-start;
+	gap: 25px;
+}
+
+.linkSocial {
+	height: 40px;
+	width: 40px;
 	background-color: var(--bg);
-
-	a {
-		@include link_underline;
-		color: var(--txt);
-	}
-
-	@media (max-width: 425px) {
-		display: none;
-	}
-
-	@media (min-width: 426px) and (max-width: 768px) {
-		gap: 10px;
-		width: 100%;
-		justify-content: space-evenly;
-	}
+	border: 2px solid var(--cta-bg);
+	padding: 5px;
+	border-radius: 50%;
+	display: flex;
+	// align-items: center;
+	justify-content: center;
+	margin-bottom: 25px;
 }
 
-nav {
-	@media (min-width: 426px) and (max-width: 768px) {
-		width: 100%;
-	}
+.open {
+	margin-left: 0%;
+	transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-.line {
-	@include line;
-	// outline: 0.25px solid var(--bg);
-}
 
-.logo {
-	// background-color: var(--bg);
-	border-radius: 5px;
-}
-
-.logo,
-.menu .line {
-	@media (min-width: 426px) and (max-width: 768px) {
-		display: none;
-	}
-}
 
 .main_btn,
 .logo {
