--- a/src/components/Homepage/Contact/contactSectionStyle.module.scss
+++ b/src/components/Homepage/Contact/contactSectionStyle.module.scss
@@ -131,6 +131,8 @@ footer {
 	justify-content: flex-end;
 
 	overflow: hidden;
+
+
 }
 
 .round {
@@ -140,4 +142,8 @@ footer {
 	height: 750%;
 	border-radius: 50%;
 	background-color: var(--bg);
+
+	@media (max-width: 425px) {
+		height: 400%;
+	}
 }
