--- a/src/components/Homepage/About/aboutSectionStyle.module.scss
+++ b/src/components/Homepage/About/aboutSectionStyle.module.scss
@@ -8,6 +8,7 @@
 	// position: relative; 101
 	// height: 100%; 101
 	display: flex;
+	gap: 50px;
 	flex-direction: column;
 	align-items: center;
 
@@ -15,6 +16,7 @@
 	padding-block: 75px;
 
 	@media (max-width: 425px) {
+		gap: 30px;
 		padding-inline: 15px;
 		padding-block: 40px;
 	}
@@ -118,26 +120,6 @@
 }
 
 
-.cta {
-	margin-top: 50px;
-	padding: 10px 25px;
-	border: 1px solid var(--txt);
-	border-radius: 10px;
-	font-size: 13px;
-	text-transform: uppercase;
-	font-weight: 500;
-
-	&:hover {
-		cursor: pointer;
-		border-color: var(--bg);
-		background-color: var(--cta-bg);
-		color: var(--txt-secondary);
-	}
-
-	@media (max-width: 425px) {
-		margin-top: 30px;
-	}
-}
 
 .line {
 	@include line;
