--- a/src/components/Homepage/Hero/heroSectionStyle.module.scss
+++ b/src/components/Homepage/Hero/heroSectionStyle.module.scss
@@ -50,15 +50,10 @@
 // SCROLL-DOWN ICON
 // SCROLL-DOWN ICON
 .cta {
-	position: relative;
-	/* width: 24px;
-	height: 24px; */
-	width: auto;
-	height: auto;
-	margin-inline: auto;
 	position: absolute;
 	bottom: 20px;
 	left: 50%;
+	transform: translate(-50%, 0);
 }
 
 .chevron {
@@ -135,5 +130,303 @@
 @keyframes pulse {
 	to {
 		opacity: 1;
+	}
+}
+
+
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down
+// 2 scrolld down// 2 scrolld down// 2 scrolld down
+
+#scrolldown {
+	display: block;
+	position: relative;
+	padding-top: 173px; //101 original 79
+	text-align: center;
+}
+
+.arrowdown {
+	display: block;
+	margin: 0 auto;
+	width: 8px; // 101 original 10
+	height: 38px;
+}
+
+.arrowdown:after {
+	content: '';
+	display: block;
+	margin: 0;
+	padding: 0;
+	width: 8px;
+	height: 8px;
+	border-top: 2px solid var(--txt);
+	border-right: 2px solid var(--txt);
+	behavior: url(-ms-transform.htc);
+	-moz-transform: rotate(135deg);
+	-webkit-transform: rotate(135deg);
+	-o-transform: rotate(135deg);
+	-ms-transform: rotate(135deg);
+	transform: rotate(135deg);
+}
+
+#scrolltitle {
+	display: block;
+	text-transform: uppercase;
+	color: var(--txt);
+	font-family: Helvetica Neue, Helvetica, Arial;
+	font-size: 14px;
+	font-weight: bold;
+	letter-spacing: .1em;
+}
+
+// 1.2s before 101
+#scrolldown::before {
+	-webkit-animation: elasticus 2.0s cubic-bezier(1, 0, 0, 1) infinite;
+	/* Safari 4+ */
+
+	-moz-animation: elasticus 2.0s cubic-bezier(1, 0, 0, 1) infinite;
+	/* Fx 5+ */
+
+	-o-animation: elasticus 2.0s cubic-bezier(1, 0, 0, 1) infinite;
+	/* Opera 12+ */
+
+	animation: elasticus 2.0s cubic-bezier(1, 0, 0, 1) infinite;
+	/* IE 10+, Fx 29+ */
+
+	position: absolute;
+	top: 0px;
+	left: 50%;
+	margin-left: -1px;
+	width: 2px;
+	height: 180px; // 101 original 90
+	background: var(--txt);
+	content: ' ';
+}
+
+@-webkit-keyframes elasticus {
+	0% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+
+	50% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	50.1% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	100% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+}
+
+@-moz-keyframes elasticus {
+	0% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+
+	50% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	50.1% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	100% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+}
+
+@-o-keyframes elasticus {
+	0% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+
+	50% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	50.1% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	100% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+}
+
+@keyframes elasticus {
+	0% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
+	}
+
+	50% {
+		-webkit-transform-origin: 0% 0%;
+		-ms-transform-origin: 0% 0%;
+		-moz-transform-origin: 0% 0%;
+		-o-transform-origin: 0% 0%;
+		transform-origin: 0% 0%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	50.1% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 1);
+		-ms-transform: scale(1, 1);
+		-moz-transform: scale(1, 1);
+		-o-transform: scale(1, 1);
+		transform: scale(1, 1);
+	}
+
+	100% {
+		-webkit-transform-origin: 0% 100%;
+		-ms-transform-origin: 0% 100%;
+		-moz-transform-origin: 0% 100%;
+		-o-transform-origin: 0% 100%;
+		transform-origin: 0% 100%;
+		-webkit-transform: scale(1, 0);
+		-ms-transform: scale(1, 0);
+		-moz-transform: scale(1, 0);
+		-o-transform: scale(1, 0);
+		transform: scale(1, 0);
 	}
 }
