--- a/src/components/shared/Contact Form/contactFormStyle.module.scss
+++ b/src/components/shared/Contact Form/contactFormStyle.module.scss
@@ -49,7 +49,16 @@
    grid-row: 3/4;
 }
 
-.message {
+// 101
+// 101
+// 101
+// 101
+// 101
+// 101
+// 101
+// 101
+// 101// 101
+label:nth-of-type(3) {
    grid-column: 1/3;
    grid-row: 2/3;
 }
