--- a/src/pages/Project Detail/projectDetailStyle.module.scss
+++ b/src/pages/Project Detail/projectDetailStyle.module.scss
@@ -29,6 +29,7 @@
 
 .img {
    max-height: 700px;
+   max-width: 100%;
    border-radius: 10px;
    background-color: red;
 
@@ -50,12 +51,13 @@
 .title {
    text-transform: uppercase;
    font-size: 60px;
+   text-align: center;
 
    @media (max-width: 425px) {
       font-size: 30px;
    }
 
-   @media (min-width: 426px) and (max-width: 768px) {
+   @media (min-width: 426px) and (max-width: 900px) {
       font-size: 35px;
    }
 }
@@ -77,7 +79,7 @@
    }
 }
 
-.buttons_w {
+.cta_w {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
@@ -93,25 +95,4 @@
       row-gap: 25px;
       column-gap: 75px;
    }
-}
-
-.button1,
-.button2,
-.button3 {
-   padding: 10px 25px;
-   border: 1px solid black;
-   border-radius: 10px;
-
-   &:hover {
-      cursor: pointer;
-      background-color: var(--cta-bg);
-      color: white;
-      border-color: white;
-   }
-}
-
-.button3 {
-   width: fit-content;
-   margin: auto;
-   grid-column: 1/3;
 }
