--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -118,6 +118,14 @@ textarea {
 	}
 }
 
+label.error {
+
+	input,
+	textarea {
+		border: 1px solid red;
+	}
+}
+
 .noScroll {
 	overflow: hidden;
 }
