--- a/src/pages/Projects Page/projectsPageStyle.module.scss
+++ b/src/pages/Projects Page/projectsPageStyle.module.scss
@@ -82,7 +82,7 @@
 	&::after {
 		content: "";
 		background-color: var(--bg);
-		background-image: url("/src/assets/211651_close_round_icon 1.svg");
+		background-image: url("/src/assets/close_icon.svg");
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: 60%;
