--- a/src/components/Layout/Header/headerStyle.module.scss
+++ b/src/components/Layout/Header/headerStyle.module.scss
@@ -78,3 +78,20 @@ nav {
 .logo {
 	z-index: 20;
 }
+
+// 101 turn into mixins with  .cta in menu mobile
+.cta {
+	background-color: var(--cta-bg);
+	color: var(--txt-secondary);
+	border: 1px solid var(--bg);
+	border-radius: 10px;
+	font-size: 16px;
+	padding: 10px 20px;
+
+	&:hover {
+		background-color: #0B75B6;
+		cursor: pointer;
+		color: var(--txt-secondaryg);
+		border: 1px solid var(--cta-bg);
+	}
+}
