--- a/src/components/Layout/Menu Mobile/menuMobileStyle.module.scss
+++ b/src/components/Layout/Menu Mobile/menuMobileStyle.module.scss
@@ -70,6 +70,11 @@
 .linkMobile {
 	text-transform: uppercase;
 	font-size: 40px;
+
+	.cta {
+		border: none;
+	}
+
 	// color: var(--txt);
 }
 
@@ -80,16 +85,30 @@
 }
 
 .linkSocial {
-	height: 40px;
-	width: 40px;
-	background-color: var(--bg);
-	border: 2px solid var(--cta-bg);
-	padding: 5px;
+	height: 45px;
+	width: 45px;
+	aspect-ratio: 1/1;
 	border-radius: 50%;
 	display: flex;
-	// align-items: center;
+	align-items: center;
 	justify-content: center;
 	margin-bottom: 25px;
+	background-color: var(--bg);
+
+	a {
+		height: 25px;
+		width: 25px;
+	}
+
+	svg {
+		height: 25px;
+		width: 25px;
+		margin: auto;
+
+		path {
+			fill: var(--txt);
+		}
+	}
 }
 
 .open {
@@ -97,7 +116,20 @@
 	transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
+.cta {
+	background-color: var(--cta-bg);
+	color: var(--txt-secondary);
+	border-radius: 10px;
+	font-size: 20px;
+	padding: 10px 20px;
 
+	&:hover {
+		background-color: #0B75B6;
+		cursor: pointer;
+		color: var(--txt-secondaryg);
+		border: 1px solid var(--cta-bg);
+	}
+}
 
 .main_btn,
 .logo {
