--- a/src/components/Layout/Socials/socialStyle.module.scss
+++ b/src/components/Layout/Socials/socialStyle.module.scss
@@ -35,8 +35,14 @@
 		display: block;
 		transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 
+		svg {
+			height: 25px;
+			width: 25px;
+		}
+
 		&:hover {
 			transform: translateY(-5px);
+			transform: scale(1.2);
 		}
 	}
 }
