--- a/src/components/Project Section Card/projectCard.module.scss
+++ b/src/components/Project Section Card/projectCard.module.scss
@@ -65,7 +65,7 @@
 		content: "";
 		display: inline-block;
 		margin-left: 5px;
-		background-image: url("../../assets/social media icon/8666682_external_link_icon.svg");
+		background-image: url("../../assets/svg icons/8666682_external_link_icon.svg");
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: contain;
